app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: szhyhota-locquin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app-container
        image: slavikz/challenge_4:v1
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "200m"
            memory: "200Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: szhyhota-locquin
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
    - port: 80
      targetPort: 5000
